rspec-tools/tests/resources/invalid-rules/S200/cpp/rule.adoc
== Resources
=== Documentation
=== Articles & blog posts
=== Conference presentations
=== Standards
=== Yolo (invalid section)
